--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <div class="call-button">
                     <a href="https://www.sexuall.live/click?o=350&a=1596" "target=_blank">Ad 2 Cash</a>    
                     <a href="https://it.hottyrealsex.com/click?o=480&a=878" "target=_blank">Exoo Offer</a>    
-                    <a href="https://qvnvdd.lluckyplaces.com/?utm_source=da57dc555e50572d&s1=157667&s2=1989539&s3=no&ban=tg&j1=1" "target=_blank">Imonitize</a>       
+                    <a href="https://qvnvdd.lluckyplaces.com/?utm_source=da57dc555e50572d&s1=157667&s2=1989539&s3=no&ban=tg&j1=1" "target=_blank">Imonitize</a>    
+                    <a href="https://track.affclick.xyz/sl?sl_id=5&aff_id=7089" "target=_blank">SmS smartlink</a>    
                     <a href="https://chouthep.net/4/7078270" "target=_blank">Monetag</a>                                        
             </div>
 
